AMPS-563 Increate PermGen for Studio-JIRA + Warning when Studio is attempted to run on Windows
git-svn-id: https://studio.atlassian.com/svn/AMPS/trunk@129984 2c54a935-e501-0410-bc05-97a93f6bca70